output.log
/home/worker/.nvm/versions/node/v18.16.0/lib/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/index.ts(1,17): error TS2307: Cannot find module 'net' or its corresponding type declarations.
src/index.ts(2,19): error TS2307: Cannot find module 'axios' or its corresponding type declarations.
src/index.ts(3,55): error TS2307: Cannot find module 'child_process' or its corresponding type declarations.
src/index.ts(4,27): error TS2307: Cannot find module 'tough-cookie' or its corresponding type declarations.
src/index.ts(5,25): error TS2307: Cannot find module 'axios-cookiejar-support' or its corresponding type declarations.
src/index.ts(6,19): error TS2307: Cannot find module 'yargs' or its corresponding type declarations.
src/index.ts(7,25): error TS2307: Cannot find module 'yargs/helpers' or its corresponding type declarations.
src/index.ts(10,16): error TS2307: Cannot find module 'os' or its corresponding type declarations.
src/index.ts(11,27): error TS2307: Cannot find module 'util' or its corresponding type declarations.
src/index.ts(12,22): error TS2307: Cannot find module 'child_process' or its corresponding type declarations.
src/index.ts(13,18): error TS2307: Cannot find module 'path' or its corresponding type declarations.
src/index.ts(16,20): error TS2580: Cannot find name 'process'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
src/index.ts(29,26): error TS2580: Cannot find name 'process'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
src/index.ts(45,30): error TS2580: Cannot find name 'process'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
src/index.ts(122,38): error TS7006: Parameter 'data' implicitly has an 'any' type.
src/index.ts(126,38): error TS7006: Parameter 'data' implicitly has an 'any' type.
src/index.ts(130,32): error TS7006: Parameter 'code' implicitly has an 'any' type.
src/index.ts(218,36): error TS7006: Parameter 'socket' implicitly has an 'any' type.
src/index.ts(222,30): error TS7006: Parameter 'data' implicitly has an 'any' type.
src/index.ts(245,25): error TS7006: Parameter 'error' implicitly has an 'any' type.
src/index.ts(255,44): error TS7006: Parameter 'cookie' implicitly has an 'any' type.
src/index.ts(415,64): error TS7006: Parameter 'cookie' implicitly has an 'any' type.
src/index.ts(458,3): error TS2580: Cannot find name 'process'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
src/index.ts(465,3): error TS2580: Cannot find name 'process'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
src/index.ts(465,30): error TS2580: Cannot find name 'process'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
src/index.ts(466,3): error TS2580: Cannot find name 'process'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
src/index.ts(466,31): error TS2580: Cannot find name 'process'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.

    at createTSError (/home/worker/.nvm/versions/node/v18.16.0/lib/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/worker/.nvm/versions/node/v18.16.0/lib/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/worker/.nvm/versions/node/v18.16.0/lib/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/worker/.nvm/versions/node/v18.16.0/lib/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/worker/.nvm/versions/node/v18.16.0/lib/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1308:10)
    at Object.require.extensions.<computed> [as .ts] (/home/worker/.nvm/versions/node/v18.16.0/lib/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1117:32)
    at Function.Module._load (node:internal/modules/cjs/loader:958:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:81:12) {
  diagnosticCodes: [
    2307, 2307, 2307, 2307, 2307,
    2307, 2307, 2307, 2307, 2307,
    2307, 2580, 2580, 2580, 7006,
    7006, 7006, 7006, 7006, 7006,
    7006, 7006, 2580, 2580, 2580,
    2580, 2580
  ]
}
